[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemy/test.png" type="Texture" id=2]
[ext_resource path="res://HUD/EnemyHealthBar/HealthBar.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 5
collision_mask = 9
script = ExtResource( 1 )

[node name="HeathBar" parent="." instance=ExtResource( 3 )]
margin_left = -35.0
margin_top = -49.0
margin_right = -35.0
margin_bottom = -49.0
rect_scale = Vector2( 0.216, 0.185 )

[node name="Shape" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="enemy_dead" from="." to="." method="_on_Enemy_enemy_dead"]
[connection signal="enemy_hit" from="." to="." method="_on_Enemy_enemy_hit"]
